--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "serve-index",
+  "name": "serve-index-fork",
   "description": "Serve directory listings",
   "version": "1.5.1",
   "author": "Douglas Christopher Wilson <doug@somethingdoug.com>",
